<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A5BD8F"
    tools:context=".SignInActivity">

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="330dp"
        android:layout_height="550dp"
        android:background="#F3EFEF"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/WhatsappPic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/ic_whatsapp" />

        <EditText
            android:id="@+id/EmailTextSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="15dp"
            android:background="#71BF72"
            android:ems="10"
            android:gravity="bottom"
            android:hint="@string/EmailTxt"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/PasswordTextSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:background="#71BF72"
            android:ems="10"
            android:hint="@string/PasswordTxt"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/NotExistTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:gravity="right"
            android:text="@string/NotExist"
            android:textColor="#248C00"
            android:textSize="18sp" />

        <Button
            android:id="@+id/SignInBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/SignIn"
            android:textSize="25sp"
            app:cornerRadius="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/GmailBtnSignIn"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_gmail_logo"
                android:padding="15dp"
                android:text="@string/GmailTxt"
                android:textColor="@android:color/holo_red_dark"
                app:cornerRadius="5dp" />

            <Button
                android:id="@+id/FacebookBtnSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:drawableLeft="@drawable/ic_facebook_app_logo"
                android:padding="15dp"
                android:text="@string/FacebookTxt"
                app:cornerRadius="5dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/WithPhoneSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/WithPhoneSignIn"
            android:textColor="#000000" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


