<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WhatsappGreen"
    tools:context=".SettingActivity">


    <ImageView
        android:id="@+id/backBtnSetting"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/ic_left_arrow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/backBtnSetting"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userImageSetting"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_man"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp"/>


        <ImageView
            android:id="@+id/addImageBtn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="-45dp"
            app:srcCompat="@drawable/ic_button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/UserName"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/userNameSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintName"
                android:inputType="textPersonName"
                android:textColor="#FFFFFF" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/Status"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/statusSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hintName"
                android:inputType="textPersonName"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/sendbutton_bg"
            android:padding="5dp"
            android:text="@string/SaveBtn">

        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_settinglayout"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/inviteFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:drawableLeft="@drawable/ic_friends"
            android:drawablePadding="50dp"
            android:padding="5dp"
            android:text="@string/inviteaFriend"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/needHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:drawableLeft="@drawable/ic_help"
            android:drawablePadding="50dp"
            android:padding="5dp"
            android:text="@string/help"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/aboutUs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:drawableLeft="@drawable/ic_information"
            android:drawablePadding="50dp"
            android:padding="5dp"
            android:text="@string/aboutUs"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:drawableLeft="@drawable/ic_message"
            android:drawablePadding="50dp"
            android:padding="5dp"
            android:text="@string/notification"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:drawableLeft="@drawable/ic_padlock"
            android:drawablePadding="50dp"
            android:padding="5dp"
            android:text="@string/privacyPolicy"
            android:textColor="#000000"
            android:textSize="14sp" />
    </LinearLayout>
</RelativeLayout>